[B]1.3.8:[/B] 04. 06. 2018
- Přidána možnost filtrování podle dabingu
- Opraveno pímseno P
- Možnost řazení posledních přidaných filmů podle data, názvu
- Opravena chyba při zrušení výběru kvality
[B]1.3.7:[/B] 03. 10. 2017
- opraveno stahování
- opraveno přehrávání (závislost na vyšší verzi stream.resolver)
[B]1.3.6:[/B] 26. 06. 2017
- Oprava přehrávání HTML5 steamů
[B]1.3.5:[/B] 06. 05. 2017
- Podpora SteamujTV HTML5 přehrávače (přihlašování)
[B]1.3.0:[/B] 17. 01. 2017
- Přepsání a použití JSON souborů od sosac (Saljack)
- Nová verze knihovny - je nutné nejprve smazat všechny dříve vytvořené .strm
soubory, následně pak všechen obsah do knihovny přidat znovu (bude se jevit
jako prázdná). Nakonec pak vyčistit KODI knihovnu, aby se smazali odkazy na
právě smazané .strm soubory.
[B]1.2.13:[/B] 14. 12. 2016
- Nová možnost automatického výběru videa dle jazyka
[B]1.2.5:[/B] 26. 03. 2016
- Oprava #41 Kdy plugin blokoval Kodi v ukončení (Kuci)
[B]1.2.4:[/B] 28. 02. 2016
- Opravené vyhľadanie na systémoch s nainštalovanou knižnicou lxml
[B]1.2.3:[/B] 20. 10. 2015
- opraveno stahování videí
[B]1.2.2:[/B] 06. 07. 2015
- přidána možnost hledání filmů
[B]1.2.1:[/B] 04. 07. 2015
- oprava .strm lze nyní ukládat i na jiné datové stroje (samba)
[B]1.2.0:[/B] 02. 07. 2015
- .strm soubory se nyní přegenerovávají pravidelně. (Zatím 1 za hod)
[B]1.1.0:[/B] 30. 05. 2015
- možnost v kontextovém menu vytvářet .strm soubory (bbaronSVK)
- nové kategorie (Naposled přidané...) (bbaronSVK)
- názvy filmů/seriálů se listují v angličtině (dle lokalizace)
[B]1.0.3:[/B]
- nová adresa serveru
[B]1.0.1:[/B]
- oprava chyby při listování většiny seriálů
[B]1.0.0:[/B]
Initial version - migration from plugin.video.tv.sosac.ph